@@ -1,13 +1,7 @@
 package com.amine.digiexpo.service.impl;
 
-import com.amine.digiexpo.DTO.AssociationDTO;
-import com.amine.digiexpo.DTO.Response;
-import com.amine.digiexpo.DTO.SessionDTO;
-import com.amine.digiexpo.DTO.VolunteerDTO;
-import com.amine.digiexpo.Repository.AssociationRepository;
-import com.amine.digiexpo.Repository.SessionRepository;
-import com.amine.digiexpo.Repository.VolunteerRepository;
-import com.amine.digiexpo.Repository.VolunteerRequestRepository;
+import com.amine.digiexpo.DTO.*;
+import com.amine.digiexpo.Repository.*;
 import com.amine.digiexpo.entity.Association;
 import com.amine.digiexpo.entity.Session;
 import com.amine.digiexpo.entity.Volunteer;
@@ -17,11 +11,16 @@ import com.amine.digiexpo.enumeration.SessionStatus;
 import com.amine.digiexpo.service.interfac.IAdminService;
 import com.amine.digiexpo.utils.Utils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import java.util.stream.Collectors;
+
 @Service
 public class AdminService implements IAdminService {
 
@@ -38,27 +37,34 @@ public class AdminService implements IAdminService {
 
     @Override
     public Response createAssociation(AssociationDTO associationDTO) {
-        if (associationRepository.findByUsername(associationDTO.getUsername()).isPresent() ||
-                associationRepository.findByEmail(associationDTO.getEmail()).isPresent()) {
-            return new Response(400, "Username or email already exists", null);
+        try {
+            if (associationRepository.findByUsername(associationDTO.getUsername()).isPresent() ||
+                    associationRepository.findByEmail(associationDTO.getEmail()).isPresent()) {
+                return new Response(400, "Username or email already exists", null);
+            }
+
+            Association association = new Association();
+            association.setUsername(associationDTO.getUsername());
+            association.setEmail(associationDTO.getEmail());
+            association.setPassword(passwordEncoder.encode(associationDTO.getPassword()));
+            association.setRole(associationDTO.getRole());
+            association.setName(associationDTO.getName());
+            association.setVille(associationDTO.getVille());
+            association.setResponsableName(associationDTO.getResponsableName());
+            association.setResponsablePhone(associationDTO.getResponsablePhone());
+
+            Association savedAssociation = associationRepository.save(association);
+            AssociationDTO savedAssociationDTO = Utils.mapAssociationToDTOWithRelations(savedAssociation);
+
+            return new Response(201, "Association created successfully", savedAssociationDTO);
+        } catch (Exception e) {
+            // Logging error for debugging and improving error response.
+            Logger.getLogger(getClass().getName()).log(Level.SEVERE, "Error creating association", e);
+            return new Response(500, "Internal server error: " + e.getMessage(), null);
         }
-
-        Association association = new Association();
-        association.setUsername(associationDTO.getUsername());
-        association.setEmail(associationDTO.getEmail());
-        association.setPassword(passwordEncoder.encode("defaultPassword"));
-        association.setRole(associationDTO.getRole());
-        association.setName(associationDTO.getName());
-        association.setVille(associationDTO.getVille());
-        association.setResponsableName(associationDTO.getResponsableName());
-        association.setResponsablePhone(associationDTO.getResponsablePhone());
-
-        Association savedAssociation = associationRepository.save(association);
-        AssociationDTO savedAssociationDTO = Utils.mapAssociationToDTOWithRelations(savedAssociation);
-
-        return new Response(201, "Association created successfully", savedAssociationDTO);
-
     }
+
+
 
     @Override
     public Response updateAssociation(Long associationId, AssociationDTO associationDTO) {
@@ -107,30 +113,32 @@ public class AdminService implements IAdminService {
         return new Response(200, "Associations retrieved successfully", associationDTOs);
     }
 
-    @Override
     public Response createVolunteer(VolunteerDTO volunteerDTO) {
         try {
             if (volunteerRepository.findByUsername(volunteerDTO.getUsername()).isPresent() ||
                     volunteerRepository.findByEmail(volunteerDTO.getEmail()).isPresent()) {
-                throw new RuntimeException("Username or email already exists");
+                return new Response(400, "Username or email already exists", null);
             }
 
             Volunteer volunteer = new Volunteer();
             volunteer.setUsername(volunteerDTO.getUsername());
             volunteer.setEmail(volunteerDTO.getEmail());
-            volunteer.setPassword(passwordEncoder.encode("defaultPassword"));
+            volunteer.setPassword(passwordEncoder.encode(volunteerDTO.getPassword()));
             volunteer.setRole(volunteerDTO.getRole());
             volunteer.setPhoneNumber(volunteerDTO.getPhoneNumber());
             volunteer.setAvailableDays(volunteerDTO.getAvailableDays());
 
             Volunteer savedVolunteer = volunteerRepository.save(volunteer);
-            VolunteerDTO savedVolunteerDTO = Utils.mapVolunteerToDTO(savedVolunteer);
+            VolunteerDTO savedVolunteerDTO = Utils.mapVolunteerToDTOWithRelations(savedVolunteer);
 
             return new Response(201, "Volunteer created successfully", savedVolunteerDTO);
-        } catch (RuntimeException e) {
-            return new Response(400, e.getMessage(), null);
+        } catch (Exception e) {
+            // Logging error for debugging and improving error response.
+            Logger.getLogger(getClass().getName()).log(Level.SEVERE, "Error creating volunteer", e);
+            return new Response(500, "Internal server error: " + e.getMessage(), null);
         }
     }
+
 
     @Override
     public Response updateVolunteer(Long volunteerId, VolunteerDTO volunteerDTO) {
@@ -168,14 +176,22 @@ public class AdminService implements IAdminService {
     @Override
     public Response getAllVolunteers() {
         List<Volunteer> volunteers = volunteerRepository.findAll();
+
+        // Validate if data exists in the database
+        if (volunteers.isEmpty()) {
+            return new Response(200, "No volunteers found", null);
+        }
+
         List<VolunteerDTO> volunteerDTOs = volunteers.stream()
                 .map(Utils::mapVolunteerToDTO)
-                .toList();
+                .collect(Collectors.toList());
 
+        // Ensure data is wrapped in the "data" field
         return new Response(200, "Volunteers retrieved successfully", volunteerDTOs);
     }
 
-    @Override
+
+    /*@Override
     public Response validateVolunteerRequest(Long requestId) {
         try {
             VolunteerRequest volunteerRequest = volunteerRequestRepository.findById(requestId)
@@ -195,6 +211,51 @@ public class AdminService implements IAdminService {
         } catch (RuntimeException e) {
             return new Response(404, e.getMessage(), null);
         }
+    }*/
+
+    @Override
+    public Response updateRequestStatus(UpdateRequestStatusDTO updateRequestStatusDTO) {
+        try {
+            Long requestId = updateRequestStatusDTO.getRequestId();
+            RequestStatus status = updateRequestStatusDTO.getStatus();
+
+            // Retrieve the request by ID
+            VolunteerRequest request = volunteerRequestRepository.findById(requestId)
+                    .orElseThrow(() -> new RuntimeException("Request not found"));
+
+            request.setStatus(status);
+
+            // Handle logic when the request is approved
+            if (status == RequestStatus.APPROVED) {
+                Volunteer volunteer = request.getVolunteer();
+                Association association = request.getAssociation();
+                if (!association.getVolunteers().contains(volunteer)) {
+                    association.getVolunteers().add(volunteer);
+                    volunteer.getAssociations().add(association);
+                    associationRepository.save(association);
+                    volunteerRepository.save(volunteer);
+                }
+            }
+
+            // Save the updated request
+            VolunteerRequest updatedRequest = volunteerRequestRepository.save(request);
+
+            return new Response(200, "Request status updated", Utils.mapVolunteerRequestToDTOWithRelations(updatedRequest));
+        } catch (Exception e) {
+            return new Response(500, "Error updating request status: " + e.getMessage(), null);
+        }
+    }
+
+
+    @Override
+    public Response getAllRequests() {
+        try {
+            // Retrieve all requests
+            List<VolunteerRequest> list = volunteerRequestRepository.findAll();
+            return new Response(200, "List of requests retrieved", Utils.mapVolunteerRequestListToDTOList(list));
+        } catch (Exception e) {
+            return new Response(500, "Error retrieving requests: " + e.getMessage(), null);
+        }
     }
 
     @Override
@@ -213,5 +274,115 @@ public class AdminService implements IAdminService {
         }
     }
 
+    @Override
+    public Response updateSession(Long sessionId, SessionStatusUpdateDTO sessionStatusUpdateDTO) {
+        try {
+            if (sessionId == null) {
+                return new Response(400, "Session ID is required", null);
+            }
+
+            Session session = sessionRepository.findById(sessionId)
+                    .orElseThrow(() -> new RuntimeException("Session not found with ID: " + sessionId));
+
+            // ✅ Only update status (we're only passing status in the DTO)
+            if (sessionStatusUpdateDTO.getStatus() != null) {
+                session.setStatus(sessionStatusUpdateDTO.getStatus());
+            } else {
+                return new Response(400, "Status is required", null);
+            }
+
+            Session updatedSession = sessionRepository.save(session);
+            return new Response(200, "Session updated successfully", Utils.mapSessionToDTOWithRelations(updatedSession));
+
+        } catch (RuntimeException e) {
+            return new Response(400, "Failed to update session: " + e.getMessage(), null);
+        } catch (Exception e) {
+            return new Response(500, "Unexpected error while updating session: " + e.getMessage(), null);
+        }
+    }
+
+
+    @Override
+    public Response getAllSessions() {
+        try {
+            // Retrieve all sessions
+            List<Session> sessions = sessionRepository.findAll();
+
+            // Return successful response
+            return new Response(200, "Sessions retrieved successfully", Utils.mapSessionListToDTOList(sessions));
+        } catch (Exception e) {
+            // Handle exceptions and return error response
+            return new Response(500, "Failed to retrieve sessions: " + e.getMessage(), null);
+        }
+    }
+
+    @Override
+    public Response getSessionById(Long sessionId) {
+        try {
+            // Find the session by ID
+            Session session = sessionRepository.findById(sessionId)
+                    .orElseThrow(() -> new RuntimeException("Session not found"));
+
+            // Return successful response
+            return new Response(200, "Session retrieved successfully", Utils.mapSessionToDTOWithRelations(session));
+        } catch (Exception e) {
+            // Handle exceptions and return error response
+            return new Response(500, "Failed to retrieve session: " + e.getMessage(), null);
+        }
+    }
+
+    @Override
+    public Response assignVolunteerToSession(Long sessionId, Long volunteerId) {
+        try {
+            // Fetch the session by ID
+            Session session = sessionRepository.findById(sessionId)
+                    .orElseThrow(() -> new RuntimeException("Session not found"));
+
+            // Fetch the volunteer by ID
+            Volunteer volunteer = volunteerRepository.findById(volunteerId)
+                    .orElseThrow(() -> new RuntimeException("Volunteer not found"));
+
+            // Check if the session belongs to an association
+            Association sessionAssociation = session.getAssociation();
+            if (sessionAssociation == null) {
+                return new Response(400, "Session does not belong to any association", null);
+            }
+
+            // Ensure the volunteer is part of the association
+            boolean isVolunteerInAssociation = volunteer.getAssociations().contains(sessionAssociation);
+            if (!isVolunteerInAssociation) {
+                return new Response(400, "This volunteer is not part of the association for this session", null);
+            }
+
+            // Assign the volunteer to the session
+            session.setVolunteer(volunteer);
+
+            // Save the updated session
+            sessionRepository.save(session);
+
+            return new Response(200, "Volunteer successfully assigned to the session", null);
+
+        } catch (RuntimeException e) {
+            return new Response(400, "Failed to assign volunteer: " + e.getMessage(), null);
+        } catch (Exception e) {
+            return new Response(500, "Unexpected error while updating session: " + e.getMessage(), null);
+        }
+    }
+
+    @Override
+    public Response getVolunteers(Long associationId) {
+        try {
+            Association association = associationRepository.findById(associationId)
+                    .orElseThrow(() -> new RuntimeException("Association not found"));
+
+            Response response = new Response();
+            response.setStatusCode(200);
+            response.setMessage("Volunteer list retrieved");
+            response.setVolunteerList(Utils.mapVolunteerListToDTOList(association.getVolunteers()));
+            return response;
+        } catch (Exception e) {
+            return new Response(500, "Failed to retrieve volunteers: " + e.getMessage(), null);
+        }
+    }
 
 }
